--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
   <div class="container">
     <div class="card blue">
-      <h2>Lorem ipsum dolor sit. Lorem ipsum dolor sit.Lorem ipsum dolor sit.Lorem ipsum dolor sit.Lorem ipsum dolor sit.git</h2>
+      <h2>Nuôi con không phải cuộc chiến</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ultricies felis.</p>
     </div>
 
