--- a/home.html
+++ b/home.html
@@ -5,33 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grid Layout Demo</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <div class="illustrations">
-    <!-- Placeholder images -->
-    <img src="https://via.placeholder.com/120x120.png?text=A" alt="astro 1">
-    <img src="https://via.placeholder.com/120x120.png?text=B" alt="astro 2">
-    <img src="https://via.placeholder.com/120x120.png?text=C" alt="astro 3">
-  </div>
+  <header>
+    <img src="assets/logo.png" alt="">
+  </header>
 
   <div class="container">
     <div class="card blue">
       <h2>Nuôi con không phải cuộc chiến</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec ultricies felis.</p>
+      <p>Khi bạn có cái nhìn sâu sắc hơn về con, hành trình nuôi dưỡng sẽ trở nên nhẹ nhàng hơn.</p>
     </div>
 
     <div class="card green">
       <h2>Hãy ghi nhớ!</h2>
       <ul>
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Consectetur adipiscing elit sed do.</li>
+        <li>Không có câu trả lời đúng hay sai, tốt hay xấu!</li>
+        <li>Trả lời dựa trên sự quan sát của bạn, không phải theo hướng bạn nghĩ con nên như vậy</li>
       </ul>
     </div>
 
     <div class="card orange">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in risus eget magna.</p>
-      <a href="#" class="button">Bắt đầu →</a>
+      <p>Hãy khám phá thế giới tiềm năng nghề nghiệp của con qua 5 câu hỏi thú vị sau đây nhé!</p>
+      <a href="#" class="button s01btn">Bắt đầu → <br> bài trắc nghiệm</a>
     </div>
   </div>
 
