--- a/home.html
+++ b/home.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid Layout Demo</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <img src="assets/logo.png" alt="">
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grid Layout Demo</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <img src="assets/logo.png" alt="" />
+    </header>
 
-  <div class="container">
-    <div class="card blue">
-      <h2>Nuôi con không phải cuộc chiến</h2>
-      <p>Khi bạn có cái nhìn sâu sắc hơn về con, hành trình nuôi dưỡng sẽ trở nên nhẹ nhàng hơn.</p>
+    <div class="container">
+      <div class="card blue">
+        <h2>Nuôi con không phải cuộc chiến</h2>
+        <p>
+          Khi bạn có cái nhìn sâu sắc hơn về con, hành trình nuôi dưỡng sẽ trở
+          nên nhẹ nhàng hơn.
+        </p>
+        <img class="yellow_planet" src="assets/yellow_planet.png" alt="" />
+        <img class="boy1" src="assets/boy1.png" alt="" />
+      </div>
+
+      <div class="card green">
+        <h2>Hãy ghi nhớ!</h2>
+        <ul>
+          <li>Không có câu trả lời đúng hay sai, tốt hay xấu!</li>
+          <li>
+            Trả lời dựa trên sự quan sát của bạn, không phải theo hướng bạn nghĩ
+            con nên như vậy
+          </li>
+        </ul>
+        <img class="boy2" src="assets/boy2.png" alt="" />
+      </div>
+
+      <div class="card orange">
+        <p>
+          Hãy khám phá thế giới tiềm năng nghề nghiệp của con qua 5 câu hỏi thú
+          vị sau đây nhé!
+        </p>
+        <a href="#" class="button s01btn"
+          >Bắt đầu <span>→</span> <br />
+          bài trắc nghiệm</a
+        >
+        <img class="planet" src="assets/planet.png" alt="" />
+      </div>
     </div>
-
-    <div class="card green">
-      <h2>Hãy ghi nhớ!</h2>
-      <ul>
-        <li>Không có câu trả lời đúng hay sai, tốt hay xấu!</li>
-        <li>Trả lời dựa trên sự quan sát của bạn, không phải theo hướng bạn nghĩ con nên như vậy</li>
-      </ul>
+    <div class="bg_pattern">
+      <div class="circleS"></div>
+      <div class="circleM"></div>
+      <div class="circleL"></div>
+      <img class="stars" src="assets/stars.png" alt="" />
     </div>
-
-    <div class="card orange">
-      <p>Hãy khám phá thế giới tiềm năng nghề nghiệp của con qua 5 câu hỏi thú vị sau đây nhé!</p>
-      <a href="#" class="button s01btn">Bắt đầu → <br> bài trắc nghiệm</a>
-    </div>
-  </div>
-
-</body>
+  </body>
 </html>
