--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
             </div>
             <div class="qq_action">
               <a class="qbtn ghost" href="">Quay lại</a>
-              <a class="qbtn main" href="">Tiếp theo</a>
+              <a class="qbtn main" href="result.html">Tiếp theo</a>
             </div>
             <div class="qq_step">1/5</div>
           </div>
