--- a/result.html
+++ b/result.html
@@ -20,73 +20,75 @@
     <div class="result_main">
       <span class="toplabel">Kết quả đêêêêê...</span>
       <div class="result_details">
-        <div class="section rds1">
-          <div class="left fade-right">
-            <h4>Tương lai con có thể là...</h4>
-          </div>
-          <div class="center fade-up">
-            <img class="a_scaleimg" src="assets/ri1.jpg" alt="" />
-          </div>
-          <div class="right fade-left">
-            <h4>Chuyên gia công nghệ</h4>
-          </div>
-        </div>
-        <div class="section rds2">
-          <h3 class="rdstitle fade-up">
-            đặc điểm <br />
-            của con
-          </h3>
-          <div class="rds2_desc fade-right">
-            <p>
-              Những người đang thiết kế sản phẩm điện tử mới hay là người điều
-              hành bộ phận công nghệ thông tin tại một tập đoàn lớn, đều rất
-              thông minh.
-            </p>
-            <p>
-              Tuy nhiên, họ thường không nổi trội về EQ hoặc ngoại giao như
-              nhiều chuyên gia trong các lĩnh vực khác
-            </p>
-          </div>
-        </div>
-        <div class="section rds3">
-          <div class="rds3media fade-right">
-            <img class="cover" src="assets/ri2.png" alt="" />
-            <img class="thumb" src="assets/ri3.png" alt="" />
-            <div class="about">
-              <strong>Steve Jobs</strong>
-              <span
-                >Người tiên phong trong lĩnh vực máy tính và điện thoại thông
-                minh.</span
-              >
+        <div class="section rds0">
+          <div class="rds0_left">
+            <div class="rds0_card">
+              <div class="thumb">
+                <img src="assets/ri0_1.png" alt="" />
+              </div>
+              <div class="details">
+                <span>Tương lai con có thể là...</span>
+                <strong>Chuyên gia công nghệ vũ trụ</strong>
+              </div>
             </div>
           </div>
-          <div class="title">
-            <h5 class="rdssubtitle top blue">tính cách con giống như một</h5>
-            <h3 class="rdstitle fade-up">
-              người nổi tiếng <br />
-              đó là
-            </h3>
+          <div class="rds0_right">
+            <div class="section rds2">
+              <h3 class="rdstitle fade-up">đặc điểm của con</h3>
+              <div class="rds2_desc fade-right">
+                <p>
+                  Những người đang thiết kế sản phẩm điện tử mới hay là người
+                  điều hành bộ phận công nghệ thông tin tại một tập đoàn lớn,
+                  đều rất thông minh.
+                </p>
+                <p>
+                  Tuy nhiên, họ thường không nổi trội về EQ hoặc ngoại giao như
+                  nhiều chuyên gia trong các lĩnh vực khác
+                </p>
+              </div>
+            </div>
+            <div class="section rds3">
+              <div class="title">
+                <h5 class="rdssubtitle top blue">
+                  tính cách con giống như một
+                </h5>
+                <h3 class="rdstitle fade-up">người nổi tiếng đó là</h3>
+              </div>
+              <div class="rds3media fade-right">
+                <img class="cover" src="assets/ri2.png" alt="" />
+                <img class="thumb" src="assets/ri3.png" alt="" />
+                <div class="about">
+                  <strong>Steve Jobs</strong>
+                  <span
+                    >Người tiên phong trong lĩnh vực máy tính và điện thoại
+                    thông minh.</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="section rds4">
+              <div class="title">
+                <h5 class="rdssubtitle top">03 điều</h5>
+                <h3 class="rdstitle">bạn nên làm cho con</h3>
+              </div>
+              <ul>
+                <li class="fade-right">
+                  Đăng ký cho con tham gia các cuộc thi công nghệ
+                  <span class="fade-up">1</span>
+                </li>
+                <li class="fade-left">
+                  Tạo điều kiện cho trẻ thực hiện các dự án công nghệ DIY (tự
+                  làm) ở nhà <span class="fade-up">2</span>
+                </li>
+                <li class="fade-right">
+                  Giám sát và đặt giới hạn cho tất cả các hoạt động trực tuyến
+                  trước khi con trưởng thành <span class="fade-up">3</span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="section rds4">
-          <div class="title">
-            <h5 class="rdssubtitle top">03 điều</h5>
-            <h3 class="rdstitle">bạn nên làm cho con</h3>
-          </div>
-          <ul>
-            <li>
-              Đăng ký cho con tham gia các cuộc thi công nghệ <span>1</span>
-            </li>
-            <li>
-              Tạo điều kiện cho trẻ thực hiện các dự án công nghệ DIY (tự làm) ở
-              nhà <span>2</span>
-            </li>
-            <li>
-              Giám sát và đặt giới hạn cho tất cả các hoạt động trực tuyến trước
-              khi con trưởng thành <span>3</span>
-            </li>
-          </ul>
-        </div>
+
         <div class="section rds5A">
           <div class="title titlecenter">
             <h5 class="rdssubtitle top grey fade-up">
@@ -180,56 +182,72 @@
           </form>
           <img class="imgpatternbg" src="assets/ri8.png" alt="" />
         </div>
-        <div class="section rds9">
-          <div class="left fade-up">
-            <div class="rds9groupitem">
-              <div class="rds_card01">
-                <img src="assets/ri9_06.png" alt="" />
-                <h6>Trung tâm giải mã gen có công suất lớn nhất Đông Nam Á</h6>
+
+        <section class="section-x rds9">
+          <div class="test-x">
+            <div class="left-x">
+              <div class="title">
+                <h5 class="rdssubtitle top blue">vì sao chọn</h5>
+                <h3 class="rdstitle">Genetica®</h3>
+                <div class="bgptrn">
+                  <div class="bgptrn1"></div>
+                  <div class="bgptrn2"></div>
+                  <div class="bgptrn3"></div>
+                </div>
               </div>
-              <div class="rds_card01">
-                <img src="assets/ri9_05.png" alt="" />
-                <h6>Đã giải mã 100.000 bộ gen người Việt Nam.</h6>
-              </div>
-              <div class="rds_card01">
-                <img src="assets/ri9_04.png" alt="" />
-                <h6>
-                  Phòng Lab theo tiêu chuẩn CLIA - nghiêm ngặt hàng đầu thế giới
-                </h6>
+            </div>
+
+            <div class="right-wrap">
+              <div class="right-x">
+                <div class="stack-x">
+                  <div class="card-x">
+                    <span>01</span>
+                    <img src="assets/ri9_06.png" alt="" />
+                    <h6>
+                      Trung tâm giải mã gen có công suất lớn nhất Đông Nam Á
+                    </h6>
+                  </div>
+                  <div class="card-x">
+                    <span>02</span>
+                    <img src="assets/ri9_05.png" alt="" />
+                    <h6>Đã giải mã 100.000 bộ gen người Việt Nam</h6>
+                  </div>
+                  <div class="card-x">
+                    <span>03</span>
+                    <img src="assets/ri9_04.png" alt="" />
+                    <h6>
+                      Phòng Lab theo tiêu chuẩn CLIA - nghiêm ngặt hàng đầu thế
+                      giới
+                    </h6>
+                  </div>
+                  <div class="card-x">
+                    <span>04</span>
+                    <img src="assets/ri9_03.png" alt="" />
+                    <h6>Độ chính xác trên 99%</h6>
+                  </div>
+                  <div class="card-x">
+                    <span>05</span>
+                    <img src="assets/ri9_02.png" alt="" />
+                    <h6>Bảo mật theo tiêu chuẩn nghiêm ngặt của Mỹ HIPAA</h6>
+                  </div>
+                  <div class="card-x">
+                    <span>06</span>
+                    <img src="assets/ri9_01.png" alt="" />
+                    <h6>
+                      Báo cáo được cố vấn và thẩm định bởi các giáo sư đầu ngành
+                      tại các trường đại học danh tiếng nhất như Stanford,
+                      Harvard, Cornell,..
+                    </h6>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="title fade-down">
-            <h5 class="rdssubtitle top blue">vì sao chọn</h5>
-            <h3 class="rdstitle">Genetica®</h3>
-            <div class="bgptrn">
-              <div class="bgptrn1"></div>
-              <div class="bgptrn2"></div>
-              <div class="bgptrn3"></div>
-            </div>
-          </div>
-          <div class="right fade-up">
-            <div class="rds9groupitem">
-              <div class="rds_card01">
-                <img src="assets/ri9_03.png" alt="" />
-                <h6>Độ chính xác trên 99%</h6>
-              </div>
-              <div class="rds_card01">
-                <img src="assets/ri9_02.png" alt="" />
-                <h6>Bảo mật theo tiêu chuẩn nghiêm ngặt của Mỹ HIPAA</h6>
-              </div>
-              <div class="rds_card01">
-                <img src="assets/ri9_01.png" alt="" />
-                <h6>
-                  Báo cáo được cố vấn và thẩm định bởi các giáo sư đầu ngành tại
-                  các trường đại học danh tiếng nhất như Stanford, Harvard,
-                  Cornell,..
-                </h6>
-              </div>
-            </div>
-          </div>
-        </div>
+        </section>
         <div class="section rds10">
+          <div class="rds10media fade-right">
+            <img class="cover" src="assets/ri10.png" alt="" />
+          </div>
           <div class="block fade-up">
             <div class="title">
               <h5 class="rdssubtitle top blue">chứng chỉ quốc tế</h5>
@@ -249,9 +267,6 @@
               tuệ, nguy cơ sức khỏe và khuyến nghị cá nhân hóa dành cho từng cá
               nhân.
             </p>
-          </div>
-          <div class="rds10media fade-right">
-            <img class="cover" src="assets/ri10.png" alt="" />
           </div>
         </div>
         <div class="section rds11">
