--- a/result.html
+++ b/result.html
@@ -22,7 +22,7 @@
       <div class="result_details">
         <div class="section rds0">
           <div class="rds0_left">
-            <div class="rds0_card">
+            <div class="rds0_card fade-down">
               <div class="thumb">
                 <img src="assets/ri0_1.png" alt="" />
               </div>
